Changelog for Yii User Management Module (Yum) 

New in 0.8:
- Added DROPDOWNLIST field type to profile fields. see docs/dropdownlist_in_registration_form.txt for information on how to use this (thyseus)
- Added possibility to make roles selectable on registration (thyseus)
- Added user Generator (available under 'other' when debug mode is enabled)
- New default URL route '<app>/user/login' instead of less beautiful '<app>/user/user/login' (thyseus)
- Refactored Registration Process into YumRegistrationController (makes YumUserController less fussy) (thyseus)
- Removed AllowInactiveAccountLogin (don't needed anymore because of the new registration Options) (thyseus)
- Possibility to show administration hierarchy by HierarchyController (thyseus)
- Prepared ROLE_has_ROLE to determine what users of which role can administrate user that have which Role (thyseus)
- Added User Statistics (thyseus)
- Removed adminpanel (thyseus)
- prepared mail_send_method (thyseus)
- added password expiration date (experimental) (thyseus)
- reworked messaging System (thyseus)
- added new Relation widget that fixed MANY_MANY DropDownList problems (thyseus)
- Wrapped Yum::t() around Yii::t() to allow easier translations (thyseus)
- Renamed YumHelper to Yum (thyseus)
- changed menu Navigation to one big, hierarchical menu displayed as a treeview (thyseus)
- added yumSettings and yumTextSettings (thyseus) 
- added differences between profile versions in admin View (thyseus)
- repaired Messages Validation (thyseus)
- Yum now tries to use the application layout by default. This can be
  configured in the application configuration (thyseus)
- Added CEmailValidator to email profile field (thyseus)
- Made users/admin CGridView filterable (thyseus)
- Added AllowRegistration & AllowRecovery in Module Configuration
- Added quick Login widget (thyseus)
- Fixed registration form and enabled YumPasswordValidator to registration Form